[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM WASM - Rust Ethereum Virtual Machine Web Assembly lib"
edition = "2021"
keywords = ["ethereum", "evm", "rust"]
license = "MIT"
name = "revmjs"
repository = "https://github.com/bluealloy/revm"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bn-rs = "0.2.3"
bytes = "1.1"
hex = "0.4"
primitive-types = { version = "0.11", default-features = false, features = ["rlp", "rustc-hex"] }
# for windows build remove ecrecover features. see more here: https://github.com/bluealloy/revm/issues/3
revm = { path = "../revm", version = "1.6", default-features = false, features = ["k256"] }
wasm-bindgen = "0.2"
